<resources>
    <string name="app_name">Logbook V2</string>
    <string name="add_daily_log">add daily log</string>
    <string name="hint_title">Daily Log</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Not Saved : Missing fields</string>
    <string name="wrong_date_format">Not Saved : Wrong date format</string>
    <string name="date_already_saved">Not Saved : Date already exist</string>
    <string name="hint_date">yyyy-MM-dd</string>
    <string name="hint_mood">0 to 5</string>
    <string name="hint_energy">0 to 5</string>
    <string name="hint_notes">Write about your day…</string>
    <string name="today_s_mood">Today\'s Mood</string>
    <string name="daily_log">Daily Log</string>
    <string name="info_day">About this day</string>
</resources>